testdata/baselines/reference/submodule/compiler/undefinedArgumentInference.errors.txt
undefinedArgumentInference.ts(3,4): error TS2322: Type 'undefined' is not assignable to type 'T'.


==== undefinedArgumentInference.ts (1 errors) ====
    function foo1<T>(f1: { x: T; y: T }): T {
    
       return undefined;
       ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    
    }
    
    var z1 = foo1({ x: undefined, y: undefined }); 
    